Call ImageResourse::UpdateImage when its ResourceLoader is missing

There are some cases when a ResourceLoader for an ImageResource is
missing. In this case, the task runner in AppendData is never available
and this caused a bug that the image is not updated when AppendData is
called.

This CL fixes this by calling UpdateImage when the ResourceLoader is not
available.

Bug: 884959
Change-Id: If92f1181290a8a451e8bf4faf8e126d3161eb116
Reviewed-on: https://chromium-review.googlesource.com/1235485
Reviewed-by: Yutaka Hirano <yhirano@chromium.org>
Commit-Queue: Hajime Hoshi <hajimehoshi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592736}
Former-commit-id: c298489d1b884a0fd2f25bdcfdd9534a1fe72a40